--- a/index.html
+++ b/index.html
@@ -19,33 +19,34 @@
       <div id="display">0</div>
 
       <!-- row 1 -->
-      <button id="ac" class="gray">AC</button>
-      <button id="plus-minus" class="gray">&plusmn;</button>
-      <button id="percent" class="gray">%</button>
-      <button id="division" class="orange">&div;</button>
+      <button id="ac" class="dark-gray">AC</button>
+      <button id="plus-minus" class="dark-gray">&plusmn;</button>
+      <button id="percent" class="dark-gray">%</button>
+      <button id="division" class="purple">&div;</button>
 
       <!-- row 2 -->
-      <button id="seven" class="gray">7</button>
-      <button id="eight" class="gray">8</button>
-      <button id="nine" class="gray">9</button>
-      <button id="multiplication" class="orange">&times;</button>
+      <button id="seven" class="gray number">7</button>
+      <button id="eight" class="gray number">8</button>
+      <button id="nine" class="gray number">9</button>
+      <button id="multiplication" class="purple">&times;</button>
 
       <!-- row 3 -->
-      <button id="four" class="gray">4</button>
-      <button id="five" class="gray">5</button>
-      <button id="six" class="gray">6</button>
-      <button id="minus" class="orange">-</button>
+      <button id="four" class="gray number">4</button>
+      <button id="five" class="gray number">5</button>
+      <button id="six" class="gray number">6</button>
+      <button id="minus" class="purple">-</button>
 
       <!-- row 4 -->
-      <button id="one" class="gray">1</button>
-      <button id="two" class="gray">2</button>
-      <button id="three" class="gray">3</button>
-      <button id="plus" class="orange">+</button>
+      <button id="one" class="gray number">1</button>
+      <button id="two" class="gray number">2</button>
+      <button id="three" class="gray number">3</button>
+      <button id="plus" class="purple">+</button>
 
       <!-- row 5 -->
-      <button id="zero" class="gray">0</button>
+      <button id="zero" class="gray number">0</button>
       <button id="dot" class="gray">.</button>
-      <button id="equal" class="orange">=</button>
+      <button id="equal" class="purple">=</button>
     </main>
   </body>
+  <script src="main.js"></script>
 </html>
