--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
       <!-- row 1 -->
       <button id="ac" class="dark-gray">AC</button>
-      <button id="plus-minus" class="dark-gray">&plusmn;</button>
-      <button id="percent" class="dark-gray">%</button>
+      <button id="sign" class="dark-gray">&plusmn;</button>
+      <button id="percentaje" class="dark-gray">%</button>
       <button id="division" class="purple">&div;</button>
 
       <!-- row 2 -->
@@ -33,13 +33,13 @@
       <button id="four" class="gray number">4</button>
       <button id="five" class="gray number">5</button>
       <button id="six" class="gray number">6</button>
-      <button id="minus" class="purple">-</button>
+      <button id="subtraction" class="purple">-</button>
 
       <!-- row 4 -->
       <button id="one" class="gray number">1</button>
       <button id="two" class="gray number">2</button>
       <button id="three" class="gray number">3</button>
-      <button id="plus" class="purple">+</button>
+      <button id="addition" class="purple">+</button>
 
       <!-- row 5 -->
       <button id="zero" class="gray number">0</button>
