--- a/index.html
+++ b/index.html
@@ -1,51 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculator</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <main>
-      <!-- row 0 -->
-      <div id="display">0</div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Calculator</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-      <!-- row 1 -->
-      <button id="ac" class="dark-gray">AC</button>
-      <button id="sign" class="dark-gray">&plusmn;</button>
-      <button id="percentaje" class="dark-gray">%</button>
-      <button id="division" class="purple">&div;</button>
+<body>
+  <main>
+    <!-- row 0 -->
+    <div id="display">0</div>
 
-      <!-- row 2 -->
-      <button id="seven" class="gray number">7</button>
-      <button id="eight" class="gray number">8</button>
-      <button id="nine" class="gray number">9</button>
-      <button id="multiplication" class="purple">&times;</button>
-      <!-- row 3 -->
-      <button id="four" class="gray number">4</button>
-      <button id="five" class="gray number">5</button>
-      <button id="six" class="gray number">6</button>
-      <button id="subtraction" class="purple">-</button>
+    <!-- row 1 -->
+    <button id="ac" class="dark-gray">AC</button>
+    <button id="sign" class="dark-gray">&plusmn;</button>
+    <button id="percentage" class="dark-gray">%</button>
+    <button id="division" class="purple">&div;</button>
 
-      <!-- row 4 -->
-      <button id="one" class="gray number">1</button>
-      <button id="two" class="gray number">2</button>
-      <button id="three" class="gray number">3</button>
-      <button id="addition" class="purple">+</button>
+    <!-- row 2 -->
+    <button id="seven" class="gray number">7</button>
+    <button id="eight" class="gray number">8</button>
+    <button id="nine" class="gray number">9</button>
+    <button id="multiplication" class="purple">&times;</button>
+    <!-- row 3 -->
+    <button id="four" class="gray number">4</button>
+    <button id="five" class="gray number">5</button>
+    <button id="six" class="gray number">6</button>
+    <button id="subtraction" class="purple">-</button>
 
-      <!-- row 5 -->
-      <button id="zero" class="gray number">0</button>
-      <button id="dot" class="gray">.</button>
-      <button id="equal" class="purple">=</button>
-    </main>
-  </body>
-  <script src="main.js"></script>
+    <!-- row 4 -->
+    <button id="one" class="gray number">1</button>
+    <button id="two" class="gray number">2</button>
+    <button id="three" class="gray number">3</button>
+    <button id="addition" class="purple">+</button>
+
+    <!-- row 5 -->
+    <button id="zero" class="gray number">0</button>
+    <button id="dot" class="gray">.</button>
+    <button id="equal" class="purple">=</button>
+  </main>
+</body>
+<script src="main.js"></script>
+
 </html>
