--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Calculator</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
@@ -16,35 +16,35 @@
   <body>
     <main>
       <!-- row 0 -->
-      <div id="display">0</div>
+      <header><h1 id="display">0</h1></header>
 
       <!-- row 1 -->
-      <button id="ac" class="dark-gray">AC</button>
-      <button id="sign" class="dark-gray">&plusmn;</button>
-      <button id="percentage" class="dark-gray">%</button>
-      <button id="division" class="purple">&div;</button>
+      <button id="ac" class="action">AC</button>
+      <button id="sign" class="action">&plusmn;</button>
+      <button id="percentage" class="action">%</button>
+      <button id="division" class="action">&div;</button>
 
       <!-- row 2 -->
-      <button id="seven" class="gray number">7</button>
-      <button id="eight" class="gray number">8</button>
-      <button id="nine" class="gray number">9</button>
-      <button id="multiplication" class="purple">&times;</button>
+      <button id="seven" class="number">7</button>
+      <button id="eight" class="number">8</button>
+      <button id="nine" class="number">9</button>
+      <button id="multiplication" class="action">&times;</button>
       <!-- row 3 -->
-      <button id="four" class="gray number">4</button>
-      <button id="five" class="gray number">5</button>
-      <button id="six" class="gray number">6</button>
-      <button id="subtraction" class="purple">-</button>
+      <button id="four" class="number">4</button>
+      <button id="five" class="number">5</button>
+      <button id="six" class="number">6</button>
+      <button id="subtraction" class="action">-</button>
 
       <!-- row 4 -->
-      <button id="one" class="gray number">1</button>
-      <button id="two" class="gray number">2</button>
-      <button id="three" class="gray number">3</button>
-      <button id="addition" class="purple">+</button>
+      <button id="one" class="number">1</button>
+      <button id="two" class="number">2</button>
+      <button id="three" class="number">3</button>
+      <button id="addition" class="action">+</button>
 
       <!-- row 5 -->
-      <button id="zero" class="gray number">0</button>
-      <button id="dot" class="gray">.</button>
-      <button id="equal" class="purple">=</button>
+      <button id="zero" class="number">0</button>
+      <button id="dot" class="action">.</button>
+      <button id="equal" class="action">=</button>
     </main>
   </body>
   <script src="main.js"></script>
