--- a/index.html
+++ b/index.html
@@ -18,33 +18,32 @@
       <!-- row 0 -->
       <header><h1 id="display">0</h1></header>
 
-      <!-- row 1 -->
-      <button id="ac" class="action">AC</button>
-      <button id="sign" class="action">&plusmn;</button>
-      <button id="percentage" class="action">%</button>
-      <button id="division" class="action">&div;</button>
-
-      <!-- row 2 -->
-      <button id="seven" class="number">7</button>
-      <button id="eight" class="number">8</button>
-      <button id="nine" class="number">9</button>
-      <button id="multiplication" class="action">&times;</button>
-      <!-- row 3 -->
-      <button id="four" class="number">4</button>
-      <button id="five" class="number">5</button>
-      <button id="six" class="number">6</button>
-      <button id="subtraction" class="action">-</button>
-
-      <!-- row 4 -->
-      <button id="one" class="number">1</button>
-      <button id="two" class="number">2</button>
-      <button id="three" class="number">3</button>
-      <button id="addition" class="action">+</button>
-
-      <!-- row 5 -->
-      <button id="zero" class="number">0</button>
-      <button id="dot" class="action">.</button>
-      <button id="equal" class="action">=</button>
+      <div>
+        <!-- row 1 -->
+        <button id="ac" class="action">AC</button>
+        <button id="sign" class="action">&plusmn;</button>
+        <button id="percentage" class="action">%</button>
+        <button id="division" class="action">&div;</button>
+        <!-- row 2 -->
+        <button id="seven" class="number">7</button>
+        <button id="eight" class="number">8</button>
+        <button id="nine" class="number">9</button>
+        <button id="multiplication" class="action">&times;</button>
+        <!-- row 3 -->
+        <button id="four" class="number">4</button>
+        <button id="five" class="number">5</button>
+        <button id="six" class="number">6</button>
+        <button id="subtraction" class="action">-</button>
+        <!-- row 4 -->
+        <button id="one" class="number">1</button>
+        <button id="two" class="number">2</button>
+        <button id="three" class="number">3</button>
+        <button id="addition" class="action">+</button>
+        <!-- row 5 -->
+        <button id="zero" class="number">0</button>
+        <button id="dot" class="action">.</button>
+        <button id="equal" class="action">=</button>
+      </div>
     </main>
   </body>
   <script src="main.js"></script>
