--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Calculator</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
